--- a/style/css.css
+++ b/style/css.css
@@ -10,9 +10,7 @@
 }
 :focus,:active{outline: none;}
 a:focus,a:active{outline: none;}
-
 nav,footer,header,aside{display: block;}
-
 html,body{
 	height: 100%;
 	width: 100%;
@@ -24,7 +22,6 @@ html,body{
 	-webkit-text-size-adjust: 100%;
 }
 input,button,textarea{font-family:inherit;}
-
 input::-ms-clear{display: none;}
 button{cursor: pointer;}
 button::-moz-focus-inner {padding:0;border:0;}
@@ -32,7 +29,6 @@ a, a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
-
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*--------------------*/
 body{
@@ -57,8 +53,6 @@ a{
     align-items: center;
     justify-content: space-between;
     color: #ffffffff;
-}
-.header__logo {
 }
 .header__info {
     display: flex;
@@ -125,7 +119,6 @@ a{
     display: none;
 }
 /*hero*/
-
 .hero{
     min-height: 80rem;
     background: url(../img/HERO\ I.jpg);
@@ -173,7 +166,6 @@ a{
     right: -2.1rem;
     top: 50%;
     transform: translate(0,-50%);
-    
 }
 .hero__text:after{
     left: -8rem;
@@ -194,10 +186,7 @@ a{
     color: #ffffff;
     text-transform: uppercase;
 }
-.hero__but {  
-}
 /*agvantage*/
-
 .advantage {
     margin-top: -11rem;
 }
@@ -216,8 +205,6 @@ a{
     background: #FFFFFF;
     box-shadow: 1rem 1rem 4rem 2rem rgba(0, 0, 0, 0.1);
 }
-.advantage__logo {
-}
 .advantage__description {
     font-family: 'Tinos',sans-serif;
     font-weight: 400;
@@ -234,13 +221,9 @@ a{
 .advantage__text {
     color: #656363;
 }
-
 /*history*/
-
 .history {
     padding-bottom: 12.2rem;
-}
-.conteiner {
 }
 .history__wrapper {
     display: flex;
@@ -261,8 +244,6 @@ a{
     line-height: 1.15;
     color: #000000;
 }
-.title {
-}
 .history__text {
     margin-bottom: 3.9rem;
     font-weight: 400;
@@ -273,8 +254,6 @@ a{
 }
 .history__number {
     display: flex;
-}
-.history__item {
 }
 .history__item:nth-child(2){
     margin: 0 3rem 0 4.1rem;
@@ -314,9 +293,7 @@ a{
     height: 50rem;
     filter:drop-shadow(.3rem .7rem .7rem rgba(0,0,0,0.25))
 }
-
 /*holiday*/
-
 .holiday {
     position: relative;
     padding: 8rem 0 10.4rem 0;
@@ -324,8 +301,6 @@ a{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-.holiday__wrapper {
 }
 .holiday__wrapper::after{
     content: '';
@@ -364,15 +339,7 @@ a{
     align-self: center;
     padding: 1.4rem 1.9rem;
 }
-.button {
-}
-
 /*Dish*/
-
-.dish {
-}
-.conteiner {
-}
 .dish__title {
     margin: 13.2rem 0 13.9rem 0;
     text-align: center;
@@ -380,8 +347,6 @@ a{
     font-weight: 400;
     font-size: 54px;
     line-height: 1.15;
-}
-.title span{
 }
 .dish__wrapper {
     display: flex;
@@ -415,18 +380,10 @@ a{
     height: 14rem;
     margin-right: 3rem;
 }
-.dish__name {
-}
 .dish__name span{
     display: none;
 }
-.dish__dotted {
-}
-.dish__coin {
-}
-
 /*menu*/
-
 .menu {
     width: 100%;
     height: 103.6rem;
@@ -524,21 +481,13 @@ a{
     background: #D67E34;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
 }
-.button {
-}
-
 /*reviews*/
- 
 .reviews {
     padding: 10.5rem 0rem;
     background-color: #E6E5E5;
 }
 .reviews__slider {
     max-width: 92rem;
-}
-.swiper {
-}
-.swiper-wrapper {
 }
 .reviews__slide {
     display: flex;
@@ -548,8 +497,6 @@ a{
     font-weight: 400;
     font-size: 2rem;
     line-height: 1.35;
-}
-.swiper-slide {
 }
 .reviews__text {
     margin-bottom: 2.5rem;
@@ -563,19 +510,15 @@ a{
 .reviews__name {
     margin-bottom: 5rem;
 }
-
 .reviews__name span:first-child{
     display: block;
     margin-bottom: 1rem;
-}
-.swiper-pagination {
 }
 .reviews__pagination {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 .reviews__slider .swiper-pagination-bullet{
     width: .5rem;
     height: .5rem;
@@ -586,9 +529,7 @@ a{
     height: .7rem;
     border: .1rem solid #FF7400;
 }
-
 /*gallery*/
-
 .gallery {
     position: relative;
     padding: 10rem 0rem 10rem 0rem;
@@ -599,8 +540,6 @@ a{
     font-size: 5.4rem;
     line-height: 115%;
     margin-bottom: 6rem;
-}
-.gallery__wrapper {
 }
 .gallery__item {
     display: flex;
@@ -626,8 +565,6 @@ a{
 .gallery__img-b {
     width: 49%;
 }
-.gallery__img-b img{
-}
 .gallery__img {
     display: flex;
     justify-content: space-between;
@@ -635,16 +572,11 @@ a{
 }
 .gallery__img-s img{
     height: 100%;
-
 }
 .gallery__img-b img{
     width: 100%;
 }
-
 /*cooks*/
-
-.cooks {
-}
 .cooks__header {
     text-align: center;
     font-weight: 400;
@@ -657,8 +589,6 @@ a{
     justify-content: space-between;
     margin-bottom: 10rem;
 }
-.cooks__img {
-}
 .cooks__img img{
     object-fit: cover;
 }
@@ -666,7 +596,6 @@ a{
     width: 100%;
     padding-bottom: 5rem;
 }
-
 @media (max-width: 80em){
     html{
         font-size: 0.765vw;}
@@ -678,7 +607,6 @@ a{
     .gallery img:hover, .cooks__wrapper img:hover{
         transform: scale(1.1)
     }
-    
 }
 @media (max-width: 48em){
     html{
@@ -694,7 +622,6 @@ a{
     .header__info{
         display: none;
     }
-    
     .header__burger{
         display: block;
     }
@@ -710,6 +637,24 @@ a{
     .hero__text:after, .hero__text::before{
         display: none;
     }
+    .hero__title{
+        font-size: 5rem;
+    }
+    .hero__subtitle{
+        margin-bottom: 1.5rem;
+    }
+    .hero__text{
+        font-size: 3rem;
+        line-height: 1.39;
+    }
+    .hero__button{
+        margin-top: 1.2rem;
+        padding: 2.5rem 4.5rem;
+        font-family: 'Open Sans';
+        font-weight: 700;
+        font-size: 2rem;
+	line-height: 0.6;
+    }
     /*advantage*/
     .advantage__wraper{
         flex-direction: column;
@@ -717,7 +662,6 @@ a{
     .advantage__item{
         width: 100%;
         min-height: 53rem;
-        
     }
     .advantage__item:not(:last-child){
         margin-bottom: 2.8rem;
@@ -731,7 +675,6 @@ a{
         line-height: 140%;
     }
     /*history*/
-
     .history__wrapper{
         flex-direction: column;
     }
@@ -769,12 +712,13 @@ a{
         height: 50rem;
     }
     /*holiday*/
-    
     .holiday .conteiner{
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     .holiday__title{
-        font-size: 6rem;
+        font-size: 5rem;
         text-align: center;
         margin-bottom: 4rem;
     }
@@ -788,9 +732,7 @@ a{
         font-weight: 700;
         padding: 2.5rem 2rem;
     }
-
     /*dish*/
-
     .dish__wrapper{
         flex-direction: column;
     }
@@ -825,7 +767,6 @@ a{
     .dish__name{
         font-size: 3.5rem;
     }
-
     .dish__name span{
         display: block;
         text-align: center;
@@ -842,7 +783,6 @@ a{
         height: 23rem;
     }
     /*menu*/
-
     .menu{
         height: 125rem;
     }
@@ -861,9 +801,6 @@ a{
     .menu__item:nth-child(2), .menu__item:nth-child(3){
         display: none;
     }
-    .menu__img{
-    
-    }
     .menu__subtitle{
         font-size: 5rem;
     }
@@ -879,52 +816,41 @@ a{
         padding: 1.8rem 3rem;
         font-size: 2.6rem;
     }
-
     /*reviews*/
-
     .reviews{
         padding-top: 2rem;
     }
-
     .reviews__text{
         font-size: 4rem;
         line-height: 150%;
         margin-bottom: 5rem;
     }
-
     .reviews__avatar{
         width: 20rem;
         height: 20rem;
     }
-
     .reviews__name{
         margin-bottom: 10rem;
     }
-
     .reviews__name span:first-child{
         font-weight: 600;
         font-size: 4rem;
         line-height: 140%;
     }
-
     .reviews__name span:last-child{
         font-size: 4rem;
         line-height: 140%;
     }
-
     .reviews__slider .swiper-pagination-bullet{
         width: 1rem;
         height: 1rem;
     }
-
     .reviews__slider .swiper-pagination-bullet-active{
         width: 1.4rem;
         height: 1.4rem;
         border: .2rem solid #FF7400;
     }
-
     /*gallery*/
-
     .gallery__item{
         flex-direction: column;
         width: 100%;
@@ -938,7 +864,6 @@ a{
     .gallery__item:first-child::after, .gallery__item:first-child::before{
         display: none;
     }
-
     .gallery__img{
     flex-direction: column;
     width: 100%;
@@ -951,9 +876,9 @@ a{
     width: 100%;
     height: 100%;
     }*/
-    .gallery__img-s{
+    .gallery__img-s img{
     height: 62rem;
-    width: 100%;
+    width: 56rem;
     }
     .gallery__img-s:first-child{
     margin-bottom: 4rem;
@@ -964,7 +889,6 @@ a{
     .gallery__img-s img, .gallery__img-b img{
         object-fit: cover;
     }
-
     /*cooks*/
     .cooks__wrapper{
         flex-direction: column;
@@ -982,5 +906,3 @@ a{
         object-fit: cover;
     }
 }
-
-
